# trident

./: .gitignore  Cargo.toml  README.md
src/: README.md  get_sirens.rs  get_stats.rs  main.rs  show_glory.rs  text_to_image.rs
