[package]
name = "trident"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
termsize = "0.1.6"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
tabled = "0.10.0"